riportata sezione competenze personali da CV2019

--- a/cv.tex
+++ b/cv.tex
@@ -114,7 +114,35 @@
   \end{tabular}%
 }{}
 %%%
-\section{Competenze}
+\section{Competenze personali}
+%%%
+\subsection{Competenze comunicative}
+\cvline{}{Buone competenze comunicative acquisite durante l’esperienza professionale nei seguenti ambiti:
+\begin{itemize}
+\item Raccolta dei requisiti utente
+\item Proposta di soluzioni tecniche al cliente
+\item Formazione del personale per utilizzo software
+\item Assistenza e supporto tecnico
+\item Produzione di documentazione scritta
+\end{itemize}}
+\subsection{Competenze organizzative e gestionali}
+\cvline{}{Capacità di organizzare e coordinare gruppi di lavoro acquisita in ambito professionale. Coordinamento di un team di professionisti in fase di progettazione, messa in opera e revisione di progetti tecnici}
+\subsection{Competenze professionali}
+\cvline{}{\begin{itemize}
+\item Capacità di analisi e implementazione di soluzioni informatiche
+\item Conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica
+\item Progettazione di architetture informatiche con tecnologia LAMP
+\item Sviluppo di soluzioni embedded su dispositivi integrati
+\item Progettazione di basi dati
+\item Gestione reti e server internet e intranet
+\item Analisi, progettazione e implementazione di applicazioni in ambiente Android
+\item Sviluppo grafico e multimediale, fotoritocco, fotografia digitale
+\item Webdesign e impaginazione
+\item Adattabilità a nuove piattaforme HW/SW, ambienti operativi, linguaggi di programmazione
+\end{itemize}}
+\subsection{Competenza digitale}
+\subsection{Competenze informatiche}
+\subsection{Altre competenze}
 %%%
 \section{Ulteriori Informazioni}
 
