riportate sezioni patente, certifizioni, corsi da CV2019

--- a/cv.tex
+++ b/cv.tex
@@ -145,7 +145,12 @@
 \subsection{Altre competenze}
 %%%
 \section{Ulteriori Informazioni}
-
+\cvline{Patente di guida}{B}
+\subsection{Certificazioni}
+\cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
+\subsection{Corsi}
+\cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
+\cvline{2017}{Corso DNS Base per Maintainer organizzato da \emph{Registro .IT}}
 % burocrazia
 \emptysection{}\closesection
 \vfill
