ri-creato completamente CV del 2019

--- a/cv.tex
+++ b/cv.tex
@@ -141,8 +141,33 @@
 \item Adattabilità a nuove piattaforme HW/SW, ambienti operativi, linguaggi di programmazione
 \end{itemize}}
 \subsection{Competenza digitale}
+\cvline{}{%
+  \centering
+  \begin{tabular}{*{5}{c}}
+    \toprule
+    \multicolumn{5}{c}{AUTOVALUTAZIONE} \\ \hline
+    Elaborazione        & Comunicazione & Creazione    & Sicurezza & Risoluzione  \\
+    delle informazioni  &               & di contenuti &           & dei problemi \\ \midrule
+    Avanzato            & Avanzato      & Avanzato     & Avanzato  & Avanzato     \\ \bottomrule
+  \end{tabular}%
+}
+%%%
 \subsection{Competenze informatiche}
+\cvcomputer{Linguaggi}{PHP, Python, Erlang, Javascript, C, VB5, Lisp, Haskell}{S.O.}{Linux, Windows, MSDOS, Android}
+\cvcomputer{Scripting}{Bash, AWK, VBA}{Versioning}{Git, Bazaar}
+\cvcomputer{Markup}{HTML5, XML, CSS, SVG, PostScript, \LaTeX}{Build}{GNU Make}
+\cvcomputer{WebServer}{Apache}{Backup}{FreeNAS, rsnapshot}
+\cvcomputer{VM}{VirtualBox, WMWare Vsphere}{DBMS}{MySQL, MariaDB, SQLite}
+\cvcomputer{Containers}{Docker, Podman}{Config}{Ansible}
+\cvcomputer{Graphics}{Inkscape, GIMP, Adobe Photoshop, ImageMagick}{Distros}{Centos, Redhat, Debian, Arch, Slackware}
+\cvcomputer{Browsers}{Chrome, Firefox, Edge, IE}{Mail}{Outlook, Thunderbird, Evolution}
+\cvcomputer{Office}{Microsoft Office, Open/Libre Office}{}{}
+%%%
 \subsection{Altre competenze}
+\cvline{}{\begin{itemize}
+  \item Ottima capacità di analisi logico matematica.
+  \item  Ottima capacità di individuazione e risoluzione problemi
+\end{itemize}}
 %%%
 \section{Ulteriori Informazioni}
 \cvline{Patente di guida}{B}
