aggiunte certificazioni recenti

--- a/cv.tex
+++ b/cv.tex
@@ -172,6 +172,8 @@
 \section{Ulteriori Informazioni}
 \cvline{Patente di guida}{B}
 \subsection{Certificazioni}
+\cvline{2023--2026}{(ISC)$^2$ CCSP -- Certified Cloud Security Professional}
+\cvline{2023--2026}{CompTIA Security+}
 \cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
 \subsection{Corsi}
 \cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
