package per formattazione e indentazione tabelle

--- a/cv.tex
+++ b/cv.tex
@@ -11,6 +11,10 @@
 \usepackage{booktabs}
 \setlength\tabcolsep{6pt}
 
+% for indenting tables
+\usepackage{enumitem}
+\setlist{itemindent=2.5mm}
+
 \firstname{Giampaolo}
 \familyname{Guiducci}
 \title{\Large{\textsc{Lead Cybersecurity \break Architect}}}
