vertical spacing tra cv entries

--- a/cv.tex
+++ b/cv.tex
@@ -29,6 +29,8 @@
 \section{Esperienza professionale}
 \cventry{2019--presente}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
         {Ingegneria Applicativa e coordinazione tecnica di un gruppo di Gestione Applicativa per \emph{Telecom Italia} in ambito security:
+\vspace{3mm}
+%%%
           \begin{itemize}
           \item AAA OSC Radiator (Authentication, Authorization and Accounting)
           \item sonde IDS/IPS (Fortinet, Forcepoint, McAfee)
@@ -36,6 +38,7 @@
           \item SIEM (McAfee ESM, Splunk Enterprise Security)
           \item monitoring (Nagios, Zabbix)
           \end{itemize}}
+\vspace{3mm}
 %%%
 \cventry{2009--2019}{Analista Programmatore Senior}{Tecnorotoli S.r.l.}{Roma}{}
         {Progettazione e realizzazione di un sistema di cartellonistica informativa digitale per \emph{Policlinico Agostino Gemelli}.
@@ -55,7 +58,8 @@
           \item Installazione di display dedicati per la visualizzazione della chiamata
           \item Installazione impianto audio di amplificazione e riproduzione nella zona triage e sala d'attesa, con integrazione dell'impianto microfonico preesistente
           \end{itemize}}
-\vspace{10pt}
+%%%
+\vspace{3mm}
 %%%
 \cventry{2004--2015}{Analista Programmatore}{Theta S.r.l.}{Roma}{}
         {Realizzazione di impianti per la gestione delle attese per privati, aziende ospedaliere e pubblica 
@@ -86,6 +90,8 @@
             Per GORI acqua
           \item Raccolta e integrazione da remoto delle statistiche di afflusso
         \end{itemize}}
+%%%
+\vspace{3mm}
 %%%
 \cventry{2004--2015}{Sistemista}{Theta S.r.l.}{Roma}{}
         {\begin{itemize}
