riscrittura esperienza NTT in due entry: GA e ING

--- a/cv.tex
+++ b/cv.tex
@@ -27,17 +27,26 @@
 \makecvtitle
 
 \section{Esperienza professionale}
-\cventry{2019--presente}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
-        {Ingegneria Applicativa e coordinazione tecnica di un gruppo di Gestione Applicativa per \emph{Telecom Italia} in ambito security:
+\cventry{2021--\footnotesize{presente}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
+        {Coordinatore di un gruppo di Gestione Applicativa per \emph{Telecom Italia} in ambito Security.\\ Tra le applicazioni gestite: \begin{itemize}
+          \item AAA (Authentication, Authorization and Accounting)
+          \item sonde IDS/IPS
+          \item DDOS Protection
+          \item SIEM
+          \item Proxy web aziendale
+          \end{itemize}
+          Amministrazione sistemistica e applicativa. Applicazione delle policy aziendali e best practice di cybersecurity e information security. Gestione del lifecycle applicativo, monitoraggio e availability.}
+%%%
 \vspace{3mm}
 %%%
+\cventry{2019--2021}{Senior Cybersecurity Engineer}{NTT Data Italia S.p.a.}{Roma}{}
+        {Ingegneria Applicativa per \emph{Telecom Italia} in ambito Security. \\ Progetti seguiti:
           \begin{itemize}
-          \item AAA OSC Radiator (Authentication, Authorization and Accounting)
-          \item sonde IDS/IPS (Fortinet, Forcepoint, McAfee)
-          \item DDOS Protection (Arbor Sightline, Arbor Insight)
-          \item SIEM (McAfee ESM, Splunk Enterprise Security)
-          \item monitoring (Nagios, Zabbix)
-          \end{itemize}}
+          \item AAA (Authentication, Authorization and Accounting)
+          \item sonde IDS/IPS
+        \end{itemize}
+        Progettazione e realizzazione soluzioni di cybersecurity. Produzione di documentazione tecnica.}
+%%%
 \vspace{3mm}
 %%%
 \cventry{2009--2019}{Analista Programmatore Senior}{Tecnorotoli S.r.l.}{Roma}{}
