semplificazione esperienze theta e tecnorotoli

--- a/cv.tex
+++ b/cv.tex
@@ -50,65 +50,45 @@
 \vspace{3mm}
 %%%
 \cventry{2009--2019}{Analista Programmatore Senior}{Tecnorotoli S.r.l.}{Roma}{}
-        {Progettazione e realizzazione di un sistema di cartellonistica informativa digitale per \emph{Policlinico Agostino Gemelli}.
+        {Progettazione, sviluppo, installazione e manutenzione per \emph{Policlinico Agostino Gemelli} di:
           \begin{itemize}
-          \item Creazione CMS dedicato con tecnologia PHP+MySQL in ambiente Centos Linux
-          \item Implementazione server push, generazione programmatica della segnaletica e procedura di dispaccio temporizzata
+          \item  sistema di cartellonistica informativa digitale
+          \item  impianto di gestione code con chiamata audio vocale digitalizzato
+          \end{itemize}
+          Tra le attività svolte:
+          \begin{itemize}
+          \item Creazione CMS dedicato con tecnologia PHP+MySQL in ambiente GNU/Linux
           \item Sviluppo client embedded per unità di controllo video su single-board computer ARM
           \item Sviluppo interfaccia interattiva di ricerca e stampa percorsi per touchscreen informativi
           \item Realizzazione grafica HTML5/CSS, secondo le linee guida del cliente
-          \item Installazione del server su piattaforma VMware
-          \end{itemize}
-        \vspace{10pt}
-          Progettazione e realizzazione di un impianto di chiamata vocale digitalizzato per \emph{Pronto Soccorso Policlinico Agostino Gemelli}.
-          \begin{itemize}
-          \item Sviluppo server e client di chiamata con tecnologia PHP+MySQL+XUL su piattaforma GNU/Linux
-          \item Realizzazione delle registrazioni attraverso sintetizzatore vocale
-          \item Installazione di display dedicati per la visualizzazione della chiamata
-          \item Installazione impianto audio di amplificazione e riproduzione nella zona triage e sala d'attesa, con integrazione dell'impianto microfonico preesistente
+          \item Installazione su piattaforma VMware
           \end{itemize}}
 %%%
 \vspace{3mm}
 %%%
 \cventry{2004--2015}{Analista Programmatore}{Theta S.r.l.}{Roma}{}
         {Realizzazione di impianti per la gestione delle attese per privati, aziende ospedaliere e pubblica 
-          amministrazione su tutto il territorio nazionale, tra cui: \emph{ACI Automobile Club d'Italia}, \emph{ASL}, \emph{INPS}, \emph{Policlinico Agostino Gemelli}, \emph{Comune di Roma Ufficio del Condono Edilizio}, \emph{Ospedale San Carlo di Nancy}, \emph{IFO Istituto Regina Elena}, \emph{Ospedale Nuovo Regina Margherita}, \emph{Equitalia}, \emph{Presidio Ospedaliero Oftalmico}, \emph{INMI Lazzaro Spallanzani}.
-          \vspace{10pt}
-          Tra le mansioni svolte:
+          amministrazione su tutto il territorio nazionale, tra cui: \emph{ACI Automobile Club d'Italia}, \emph{ASL}, \emph{INPS}, \emph{Policlinico Agostino Gemelli}, \emph{Comune di Roma Ufficio del Condono Edilizio}, \emph{Ospedale San Carlo di Nancy}, \emph{IFO Istituto Regina Elena}, \emph{Ospedale Nuovo Regina Margherita}, \emph{Equitalia}, \emph{Presidio Ospedaliero Oftalmico}, \emph{INMI Lazzaro Spallanzani}.\\Tra le mansioni svolte:
           \begin{itemize}
-          \item Sopralluoghi e raccolta delle specifiche del cliente
+          \item Gestione del rapporto tecnico con il cliente in tutte le fasi del progetto
+          \item Sopralluoghi e raccolta delle specifiche di progetto
           \item Progettazione dell'impianto con hardware dedicato e software in-house
+          \item Customizzazione della componente software secondo le esigenze del cliente
           \item Realizzazione e installazione hardware e software
           \item Istruzione e formazione del personale
           \item Assistenza telefonica e on-site
           \item Interventi di riparazione e manutenzione
-          \item Gestione del rapporto tecnico con il cliente dalle fasi iniziali al completamento del progetto
-          \end{itemize}
-          \vspace{10pt}
-          Customizzazione della componente software degli impianti di gestione code, adattandola alle esigenze del cliente. Tra le altre:
-          Per IDI – Istituto dermopatico dell'Immacolata
-          \begin{itemize}
-          \item Migrazione dell'impianto da ambiente Windows ad ambiente Linux, e successivamente alla virtualizzazione dei client
-          \item Integrazione con sistema di report preesistente
-          \item Sviluppo di feature per l'automazione, l'analisi e lo snellimento delle procedure di sportello
-          \end{itemize}
-          Per CPI – Centri per l'impiego
-          \begin{itemize}
-          \item Sviluppo di API dedicate per l'integrazione con applicazioni Android
-          \item Sincronizzazione dell'orologio di sede via internet
-            Per GORI acqua
-          \item Raccolta e integrazione da remoto delle statistiche di afflusso
-        \end{itemize}}
+          \end{itemize}}
 %%%
 \vspace{3mm}
 %%%
 \cventry{2004--2015}{Sistemista}{Theta S.r.l.}{Roma}{}
         {\begin{itemize}
-          \item Gestione della rete aziendale e del parco PC
-          \item Amministrazione dei server aziendali, fisici e virtuali (VPS): web, mail, DNS, NAS, backup
+          \item Amministrazione della rete aziendale e del parco PC
+          \item Gestione dei server aziendali, fisici e virtuali (VPS): web, mail, DNS, NAS, backup
           \item Registrazione e mantenimento di domini internet presso il \emph{Registro IT} in qualità di Maintainer e Registrar (protocollo EPP)
           \item Responsabile delle procedure di backup e dei sistemi di sicurezza informatica
-          \item Sviluppo di un sistema per l'accesso protetto ad internet per operazioni di online banking, basato su GNU/Linux
+          \item Sviluppo di un sistema per l'accesso protetto ad internet per online banking, basato su GNU/Linux
         \end{itemize}}
 %%%
 \cventry{2002--2004}{Programmatore}{Turnomatic S.r.l}{Roma}{}{Sviluppo interfaccia utente desktop per sistema di allarme per operatori di sportello e casse (Visual Basic 5)}
