spostate certificazioni più in alto nel CV

--- a/cv.tex
+++ b/cv.tex
@@ -94,6 +94,10 @@
 \section{Istruzione}
 \cventry{1996--2000}{Maturità Scientifica}{L.S.S. Amedeo Avogadro}{Roma}{\textit{96/100}}{}
 %%%
+\section{Certificazioni}
+\cvline{2023}{(ISC)$^2$ CCSP -- Certified Cloud Security Professional}
+\cvline{2023}{CompTIA Security+}
+%%%
 \section{Lingue}
 %%%
 \cvlanguage{Italiano}{madrelingua}{}
@@ -166,9 +170,6 @@
 %%%
 \section{Ulteriori Informazioni}
 \cvline{Patente di guida}{B}
-\subsection{Certificazioni}
-\cvline{2023--2026}{(ISC)$^2$ CCSP -- Certified Cloud Security Professional}
-\cvline{2023--2026}{CompTIA Security+}
 \cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
 \subsection{Corsi}
 \cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
