riformattata tabella autovalutazione lingua inglese

--- a/cv.tex
+++ b/cv.tex
@@ -106,10 +106,11 @@
   \centering
   \begin{tabular}{*{5}{c}}
     \toprule
-    \multicolumn{2}{c}{COMPRENSIONE} & \multicolumn{2}{c}{PARLATO}          & PRODUZIONE \\
-    &               &                &                                      & SCRITTA    \\ \midrule
-    Ascolto         & Lettura        & Interazione & Produzione orale & -                \\ \hline
-    C2              & C2             & C1          & C2                     & C1         \\ \bottomrule
+    \multicolumn{2}{c}{Comprensione} & \multicolumn{2}{c}{Parlato}          & Scritto \\ \midrule
+    Ascolto         & Lettura        & Interazione & Produzione orale & -             \\
+    C2              & C2             & C1          & C2                     & C1      \\ \bottomrule
+    \multicolumn{5}{c}{\tiny{Livelli: A1/2 Livello base - B1/2 Livello intermedio - C1/2 Livello avanzato}}\\
+    \multicolumn{5}{c}{\tiny{Quadro Comune Europeo di Riferimento delle Lingue}}\\
   \end{tabular}%
 }{}
 %%%
