uso mm in definizione spazio verticale

--- a/cv.tex
+++ b/cv.tex
@@ -101,7 +101,7 @@
 \section{Lingue}
 %%%
 \cvlanguage{Italiano}{madrelingua}{}
-\vspace{5pt}
+\vspace{3mm}
 \cvlanguage{Inglese}{%
   \centering
   \begin{tabular}{*{5}{c}}
