riscrittura delle sezione di competenze (rimosse subsections)

--- a/cv.tex
+++ b/cv.tex
@@ -114,60 +114,47 @@
   \end{tabular}%
 }{}
 %%%
-\section{Competenze personali}
+\closesection
+\pagebreak
 %%%
-\subsection{Competenze comunicative}
-\cvline{}{Buone competenze comunicative acquisite durante l’esperienza professionale nei seguenti ambiti:
-\begin{itemize}
-\item Raccolta dei requisiti utente
-\item Proposta di soluzioni tecniche al cliente
-\item Formazione del personale per utilizzo software
-\item Assistenza e supporto tecnico
-\item Produzione di documentazione scritta
-\end{itemize}}
-\subsection{Competenze organizzative e gestionali}
-\cvline{}{Capacità di organizzare e coordinare gruppi di lavoro acquisita in ambito professionale. Coordinamento di un team di professionisti in fase di progettazione, messa in opera e revisione di progetti tecnici}
-\subsection{Competenze professionali}
-\cvline{}{\begin{itemize}
-\item Capacità di analisi e implementazione di soluzioni informatiche
-\item Conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica
-\item Progettazione di architetture informatiche con tecnologia LAMP
-\item Sviluppo di soluzioni embedded su dispositivi integrati
-\item Progettazione di basi dati
-\item Gestione reti e server internet e intranet
-\item Analisi, progettazione e implementazione di applicazioni in ambiente Android
-\item Sviluppo grafico e multimediale, fotoritocco, fotografia digitale
-\item Webdesign e impaginazione
-\item Adattabilità a nuove piattaforme HW/SW, ambienti operativi, linguaggi di programmazione
-\end{itemize}}
-\subsection{Competenza digitale}
-\cvline{}{%
-  \centering
-  \begin{tabular}{*{5}{c}}
-    \toprule
-    \multicolumn{5}{c}{AUTOVALUTAZIONE} \\ \hline
-    Elaborazione        & Comunicazione & Creazione    & Sicurezza & Risoluzione  \\
-    delle informazioni  &               & di contenuti &           & dei problemi \\ \midrule
-    Avanzato            & Avanzato      & Avanzato     & Avanzato  & Avanzato     \\ \bottomrule
-  \end{tabular}%
-}
+\section{Competenze professionali}
 %%%
-\subsection{Competenze informatiche}
-\cvcomputer{Linguaggi}{PHP, Python, Erlang, Javascript, C, VB5, Lisp, Haskell}{S.O.}{Linux, Windows, MSDOS, Android}
-\cvcomputer{Scripting}{Bash, AWK, VBA}{Versioning}{Git, Bazaar}
-\cvcomputer{Markup}{HTML5, XML, CSS, SVG, PostScript, \LaTeX}{Build}{GNU Make}
-\cvcomputer{WebServer}{Apache}{Backup}{FreeNAS, rsnapshot}
-\cvcomputer{VM}{VirtualBox, WMWare Vsphere}{DBMS}{MySQL, MariaDB, SQLite}
-\cvcomputer{Containers}{Docker, Podman}{Config}{Ansible}
-\cvcomputer{Graphics}{Inkscape, GIMP, Adobe Photoshop, ImageMagick}{Distros}{Centos, Redhat, Debian, Arch, Slackware}
-\cvcomputer{Browsers}{Chrome, Firefox, Edge, IE}{Mail}{Outlook, Thunderbird, Evolution}
-\cvcomputer{Office}{Microsoft Office, Open/Libre Office}{}{}
+\cvlistitem{Team Leading and Coordination}
+\cvlistitem{Project Management}
+\cvlistitem{IT Security Administration}
+\cvlistitem{IT Security Architecture Design (data protection, security operation center, identity \& access management, electronic signature, certification authority)}
+\cvlistitem{Sviluppo e scripting (Conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica)}
+\cvlistitem{Spiccate capacità comunicative}
+\cvlistitem{Ottima capacità di analisi logico matematica}
+\cvlistitem{Ottima capacità di individuazione e risoluzione problemi}
+\cvlistitem{Produzione di documentazione tecnica}
+\cvlistitem{Naturale predisposizione alla formazione}
+\cvlistitem{Fondamenti di grafica, fotoritocco, impaginazione, webdesign}
 %%%
-\subsection{Altre competenze}
-\cvline{}{\begin{itemize}
-  \item Ottima capacità di analisi logico matematica.
-  \item  Ottima capacità di individuazione e risoluzione problemi
-\end{itemize}}
+\section{Competenze tecniche}
+%%%
+\cvlistitem{Intrusion Prevention/Detection (Fortinet, Forcepoint NGFW, McAfee NSM)}
+\cvlistitem{AAA (OSC Radiator, Cisco ACS)}
+\cvlistitem{DDOS Protection (Arbor Sightline, Arbor Insight)}
+\cvlistitem{SIEM (McAfee ESM, Splunk Enterprise Security)}
+\cvlistitem{Secure Proxy (Trellix WebGateway, Squid)}
+\cvlistitem{Monitoring (Nagios, Zabbix)}
+\cvlistitem{LDAP (OpenDJ)}
+\cvlistitem{DBMS (MySQL, MariaDB, SQLite)}
+\cvlistitem{Linguaggi (Python, PHP, Erlang, Javascript, C, VB5, Lisp, Haskell)}
+\cvlistitem{Scripting (Bash, AWK, VBA)}
+\cvlistitem{Sistemi Operativi (Linux, Windows, MSDOS, Android)}
+\cvlistitem{Distribuzioni GNU/Linux (Centos, Redhat, Debian, Arch, Slackware)}
+\cvlistitem{WebServers (Apache)}
+\cvlistitem{Backup tools (FreeNAS, rsnapshot)}
+\cvlistitem{Virtualitazion (VirtualBox, WMWare Vsphere)}
+\cvlistitem{Versioning (Git, Bazaar)}
+\cvlistitem{Markup (HTML5, XML, CSS, SVG, PostScript, \LaTeX)}
+\cvlistitem{Build systems (GNU Make)}
+\cvlistitem{Containers (Docker, Podman)}
+\cvlistitem{Config management (Ansible)}
+\cvlistitem{Tool di grafica (Inkscape, GIMP, Adobe Photoshop, ImageMagick)}
+
 %%%
 \section{Ulteriori Informazioni}
 \cvline{Patente di guida}{B}
