--- a/cv.tex
+++ b/cv.tex
@@ -156,6 +156,11 @@
 \cvlistitem{Tool di grafica (Inkscape, GIMP, Adobe Photoshop, ImageMagick)}
 
 %%%
+\section{Interessi}
+\cvlistitem{Linguaggi di programmazione, Algoritmi, Computer Science}
+\cvlistitem{Machine Learning, Deep Learning}
+\cvlistitem{Sintesi audio, DSP, Livecoding}
+%%%
 \section{Ulteriori Informazioni}
 \cvline{Patente di guida}{B}
 \cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
