rimpicciolito font scritta patente di guida per farla stare in 1riga

--- a/cv.tex
+++ b/cv.tex
@@ -162,7 +162,7 @@
 \cvlistitem{Sintesi audio, DSP, Livecoding}
 %%%
 \section{Ulteriori Informazioni}
-\cvline{Patente di guida}{B}
+\cvline{\scriptsize{Patente di guida}}{B}
 \cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
 \subsection{Corsi}
 \cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
