separate abilitazioni da certificazioni e corsi

--- a/cv.tex
+++ b/cv.tex
@@ -163,6 +163,7 @@
 %%%
 \section{Ulteriori Informazioni}
 \cvline{\scriptsize{Patente di guida}}{B}
+\subsection{Abilitazioni}
 \cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
 \subsection{Corsi}
 \cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
