aggiunto SOAR tra le applicazioni gestite

--- a/cv.tex
+++ b/cv.tex
@@ -33,6 +33,7 @@
           \item sonde IDS/IPS
           \item DDOS Protection
           \item SIEM
+          \item SOAR
           \item Proxy web aziendale
           \end{itemize}
           Amministrazione sistemistica e applicativa. Applicazione delle policy aziendali e best practice di cybersecurity e information security. Gestione del lifecycle applicativo, monitoraggio e availability.}
