Spezzato paragrafo in due linee, si legge meglio

--- a/cv.tex
+++ b/cv.tex
@@ -46,7 +46,8 @@
           \item AAA (Authentication, Authorization and Accounting)
           \item sonde IDS/IPS
         \end{itemize}
-        Progettazione e realizzazione soluzioni di cybersecurity. Produzione di documentazione tecnica.}
+          Progettazione e realizzazione soluzioni di cybersecurity.\\
+          Produzione di documentazione tecnica.}
 %%%
 \vspace{3mm}
 %%%
