usato acronimo LAMP in contesto

--- a/cv.tex
+++ b/cv.tex
@@ -59,7 +59,7 @@
           \end{itemize}
           Tra le attività svolte:
           \begin{itemize}
-          \item Creazione CMS dedicato con tecnologia PHP+MySQL in ambiente GNU/Linux
+          \item Creazione CMS dedicato con stack LAMP (Linux, Apache, MySQL, PHP)
           \item Sviluppo client embedded per unità di controllo video su single-board computer ARM
           \item Sviluppo interfaccia interattiva di ricerca e stampa percorsi per touchscreen informativi
           \item Realizzazione grafica HTML5/CSS, secondo le linee guida del cliente
