aggiunto Secure DevOps tra le Competenze Professionali

--- a/cv.tex
+++ b/cv.tex
@@ -125,7 +125,8 @@
 \cvlistitem{Project Management}
 \cvlistitem{IT Security Administration}
 \cvlistitem{IT Security Architecture Design (data protection, security operation center, identity \& access management, electronic signature, certification authority)}
-\cvlistitem{Sviluppo e scripting (Conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica)}
+\cvlistitem{Sviluppo e scripting (conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica)}
+\cvlistitem{Secure DevOps}
 \cvlistitem{Spiccate capacità comunicative}
 \cvlistitem{Ottima capacità di analisi logico matematica}
 \cvlistitem{Ottima capacità di individuazione e risoluzione problemi}
