cambiato ordine dei linguaggi, dai più conosciuti ai più esoterici

--- a/cv.tex
+++ b/cv.tex
@@ -144,7 +144,7 @@
 \cvlistitem{Monitoring (Nagios, Zabbix)}
 \cvlistitem{LDAP (OpenDJ)}
 \cvlistitem{DBMS (MySQL, MariaDB, SQLite)}
-\cvlistitem{Linguaggi (Python, PHP, Erlang, Javascript, C, VB5, Lisp, Haskell)}
+\cvlistitem{Linguaggi (Python, PHP, Javascript, C, VB5, Lisp, Erlang, Haskell)}
 \cvlistitem{Scripting (Bash, AWK, VBA)}
 \cvlistitem{Sistemi Operativi (Linux, Windows, MSDOS, Android)}
 \cvlistitem{Distribuzioni GNU/Linux (Centos, Redhat, Debian, Arch, Slackware)}
