Ri-organizzazione e revisione delle Competenze Tecniche

--- a/cv.tex
+++ b/cv.tex
@@ -147,16 +147,15 @@
 \cvlistitem{Linguaggi (Python, PHP, Javascript, C, VB5, Lisp, Erlang, Haskell)}
 \cvlistitem{Scripting (Bash, AWK, VBA)}
 \cvlistitem{Sistemi Operativi (Linux, Windows, MSDOS, Android)}
-\cvlistitem{Distribuzioni GNU/Linux (Centos, Redhat, Debian, Arch, Slackware)}
-\cvlistitem{WebServers (Apache)}
-\cvlistitem{Backup tools (FreeNAS, rsnapshot)}
-\cvlistitem{Virtualitazion (VirtualBox, WMWare Vsphere)}
+\cvlistitem{Distribuzioni GNU/Linux (Centos, Red Hat, Debian, Arch, Slackware)}
+\cvlistitem{Web Server (Apache)}
+\cvlistitem{Strumenti di Backup (FreeNAS, rsnapshot)}
+\cvlistitem{Virtualizzazione e Containers (Docker, Podman, VirtualBox, VMware vSphere)}
 \cvlistitem{Versioning (Git, Bazaar)}
-\cvlistitem{Markup (HTML5, XML, CSS, SVG, PostScript, \LaTeX)}
-\cvlistitem{Build systems (GNU Make)}
-\cvlistitem{Containers (Docker, Podman)}
-\cvlistitem{Config management (Ansible)}
-\cvlistitem{Tool di grafica (Inkscape, GIMP, Adobe Photoshop, ImageMagick)}
+\cvlistitem{Linguaggi di Markup (HTML5, XML, CSS, SVG, PostScript, \LaTeX)}
+\cvlistitem{Build Systems (GNU Make)}
+\cvlistitem{Config Management (Ansible)}
+\cvlistitem{Grafica (Inkscape, GIMP, Adobe Photoshop, ImageMagick)}
 
 %%%
 \section{Interessi}
