aggiunta data di nascita (maledetti!)

--- a/cv.tex
+++ b/cv.tex
@@ -22,6 +22,7 @@
 \mobile{+39~349~3668324}
 \email{giampaolo.guiducci@gmail.com}
 \social[github]{https://github.com/gosub}
+\extrainfo{d.d.n.: 1981-08-14}
 
 \begin{document}
 \makecvtitle
