modularizzato cv italiano e inglese con lo stesso cv.tex di base

--- a/cv.tex
+++ b/cv.tex
@@ -15,167 +15,11 @@
 \usepackage{enumitem}
 \setlist{itemindent=2.5mm}
 
-\firstname{Giampaolo}
-\familyname{Guiducci}
-\title{\Large{\textsc{Lead Cybersecurity \break Architect}}}
-\address{Roma, Italia}
-\mobile{+39~349~3668324}
-\email{giampaolo.guiducci@gmail.com}
-\social[github]{https://github.com/gosub}
-\extrainfo{d.d.n.: 1981-08-14}
+\IfFileExists{FLAGEN}{\input{src/title_en.tex}}{\input{src/title_it.tex}}
 
 \begin{document}
 \makecvtitle
 
-\section{Esperienza professionale}
-\cventry{2021--\footnotesize{presente}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
-        {Coordinatore di un gruppo di Gestione Applicativa per \emph{Telecom Italia} in ambito Security.\\ Tra le applicazioni gestite: \begin{itemize}
-          \item AAA (Authentication, Authorization and Accounting)
-          \item sonde IDS/IPS
-          \item DDOS Protection
-          \item SIEM
-          \item SOAR
-          \item Proxy web aziendale
-          \end{itemize}
-          Amministrazione sistemistica e applicativa. Applicazione delle policy aziendali e best practice di cybersecurity e information security. Gestione del lifecycle applicativo, monitoraggio e availability.}
-%%%
-\vspace{3mm}
-%%%
-\cventry{2019--2021}{Senior Cybersecurity Engineer}{NTT Data Italia S.p.a.}{Roma}{}
-        {Ingegneria Applicativa per \emph{Telecom Italia} in ambito Security. \\ Progetti seguiti:
-          \begin{itemize}
-          \item AAA (Authentication, Authorization and Accounting)
-          \item sonde IDS/IPS
-        \end{itemize}
-          Progettazione e realizzazione soluzioni di cybersecurity.\\
-          Produzione di documentazione tecnica.}
-%%%
-\vspace{3mm}
-%%%
-\cventry{2009--2019}{Analista Programmatore Senior}{Tecnorotoli S.r.l.}{Roma}{}
-        {Progettazione, sviluppo, installazione e manutenzione per \emph{Policlinico Agostino Gemelli} di:
-          \begin{itemize}
-          \item  sistema di cartellonistica informativa digitale
-          \item  impianto di gestione code con chiamata audio vocale digitalizzato
-          \end{itemize}
-          Tra le attività svolte:
-          \begin{itemize}
-          \item Creazione CMS dedicato con stack LAMP (Linux, Apache, MySQL, PHP)
-          \item Sviluppo client embedded per unità di controllo video su single-board computer ARM
-          \item Sviluppo interfaccia interattiva di ricerca e stampa percorsi per touchscreen informativi
-          \item Realizzazione grafica HTML5/CSS, secondo le linee guida del cliente
-          \item Installazione su piattaforma VMware
-          \end{itemize}}
-%%%
-\vspace{3mm}
-%%%
-\cventry{2004--2015}{Analista Programmatore}{Theta S.r.l.}{Roma}{}
-        {Realizzazione di impianti per la gestione delle attese per privati, aziende ospedaliere e pubblica 
-          amministrazione su tutto il territorio nazionale, tra cui: \emph{ACI Automobile Club d'Italia}, \emph{ASL}, \emph{INPS}, \emph{Policlinico Agostino Gemelli}, \emph{Comune di Roma Ufficio del Condono Edilizio}, \emph{Ospedale San Carlo di Nancy}, \emph{IFO Istituto Regina Elena}, \emph{Ospedale Nuovo Regina Margherita}, \emph{Equitalia}, \emph{Presidio Ospedaliero Oftalmico}, \emph{INMI Lazzaro Spallanzani}.\\Tra le mansioni svolte:
-          \begin{itemize}
-          \item Gestione del rapporto tecnico con il cliente in tutte le fasi del progetto
-          \item Sopralluoghi e raccolta delle specifiche di progetto
-          \item Progettazione dell'impianto con hardware dedicato e software in-house
-          \item Customizzazione della componente software secondo le esigenze del cliente
-          \item Realizzazione e installazione hardware e software
-          \item Istruzione e formazione del personale
-          \item Assistenza telefonica e on-site
-          \item Interventi di riparazione e manutenzione
-          \end{itemize}}
-%%%
-\vspace{3mm}
-%%%
-\cventry{2004--2015}{Sistemista}{Theta S.r.l.}{Roma}{}
-        {\begin{itemize}
-          \item Amministrazione della rete aziendale e del parco PC
-          \item Gestione dei server aziendali, fisici e virtuali (VPS): web, mail, DNS, NAS, backup
-          \item Registrazione e mantenimento di domini internet presso il \emph{Registro IT} in qualità di Maintainer e Registrar (protocollo EPP)
-          \item Responsabile delle procedure di backup e dei sistemi di sicurezza informatica
-          \item Sviluppo di un sistema per l'accesso protetto ad internet per online banking, basato su GNU/Linux
-        \end{itemize}}
-%%%
-\section{Istruzione}
-\cventry{1996--2000}{Maturità Scientifica}{L.S.S. Amedeo Avogadro}{Roma}{\textit{96/100}}{}
-%%%
-\section{Certificazioni}
-\cvline{2023}{(ISC)$^2$ CCSP -- Certified Cloud Security Professional}
-\cvline{2023}{CompTIA Security+}
-%%%
-\section{Lingue}
-%%%
-\cvlanguage{Italiano}{madrelingua}{}
-\vspace{3mm}
-\cvlanguage{Inglese}{%
-  \centering
-  \begin{tabular}{*{5}{c}}
-    \toprule
-    \multicolumn{2}{c}{Comprensione} & \multicolumn{2}{c}{Parlato}          & Scritto \\ \midrule
-    Ascolto         & Lettura        & Interazione & Produzione orale & -             \\
-    C2              & C2             & C1          & C2                     & C1      \\ \bottomrule
-    \multicolumn{5}{c}{\tiny{Livelli: A1/2 Livello base - B1/2 Livello intermedio - C1/2 Livello avanzato}}\\
-    \multicolumn{5}{c}{\tiny{Quadro Comune Europeo di Riferimento delle Lingue}}\\
-  \end{tabular}%
-}{}
-%%%
-\closesection
-\pagebreak
-%%%
-\section{Competenze professionali}
-%%%
-\cvlistitem{Team Leading and Coordination}
-\cvlistitem{Project Management}
-\cvlistitem{IT Security Administration}
-\cvlistitem{IT Security Architecture Design (data protection, security operation center, identity \& access management, electronic signature, certification authority)}
-\cvlistitem{Sviluppo e scripting (conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica)}
-\cvlistitem{Secure DevOps}
-\cvlistitem{Spiccate capacità comunicative}
-\cvlistitem{Ottima capacità di analisi logico matematica}
-\cvlistitem{Ottima capacità di individuazione e risoluzione problemi}
-\cvlistitem{Produzione di documentazione tecnica}
-\cvlistitem{Naturale predisposizione alla formazione}
-\cvlistitem{Fondamenti di grafica, fotoritocco, impaginazione, webdesign}
-%%%
-\section{Competenze tecniche}
-%%%
-\cvlistitem{Intrusion Prevention/Detection (Fortinet, Forcepoint NGFW, McAfee NSM)}
-\cvlistitem{AAA (OSC Radiator, Cisco ACS)}
-\cvlistitem{DDOS Protection (Arbor Sightline, Arbor Insight)}
-\cvlistitem{SIEM (McAfee ESM, Splunk Enterprise Security)}
-\cvlistitem{Secure Proxy (Trellix WebGateway, Squid)}
-\cvlistitem{Monitoring (Nagios, Zabbix)}
-\cvlistitem{LDAP (OpenDJ)}
-\cvlistitem{DBMS (MySQL, MariaDB, SQLite)}
-\cvlistitem{Linguaggi (Python, PHP, Javascript, C, VB5, Lisp, Erlang, Haskell)}
-\cvlistitem{Scripting (Bash, AWK, VBA)}
-\cvlistitem{Sistemi Operativi (Linux, Windows, MSDOS, Android)}
-\cvlistitem{Distribuzioni GNU/Linux (Centos, Red Hat, Debian, Arch, Slackware)}
-\cvlistitem{Web Server (Apache)}
-\cvlistitem{Strumenti di Backup (FreeNAS, rsnapshot)}
-\cvlistitem{Virtualizzazione e Containers (Docker, Podman, VirtualBox, VMware vSphere)}
-\cvlistitem{Versioning (Git, Bazaar)}
-\cvlistitem{Linguaggi di Markup (HTML5, XML, CSS, SVG, PostScript, \LaTeX)}
-\cvlistitem{Build Systems (GNU Make)}
-\cvlistitem{Config Management (Ansible)}
-\cvlistitem{Grafica (Inkscape, GIMP, Adobe Photoshop, ImageMagick)}
-
-%%%
-\section{Interessi}
-\cvlistitem{Linguaggi di programmazione, Algoritmi, Computer Science}
-\cvlistitem{Sintesi audio, DSP, Livecoding}
-\cvlistitem{Machine Learning, Deep Learning}
-%%%
-\section{Ulteriori Informazioni}
-\cvline{\scriptsize{Patente di guida}}{B}
-\subsection{Abilitazioni}
-\cvline{2015}{Abilitazione alla gestione tecnica ai sensi del D.M. 37/2008 per l'esercizio delle attività di cui alla lettera A, B, C, D, E}
-\subsection{Corsi}
-\cvline{2017}{Corso DNS Avanzato per Maintainer organizzato da \emph{Registro .IT}}
-\cvline{2017}{Corso DNS Base per Maintainer organizzato da \emph{Registro .IT}}
-% burocrazia
-\emptysection{}\closesection
-\vfill
-\begin{center}
-\textit{\small Autorizzo il trattamento dei miei dati personali ai sensi del Decreto Legislativo 30 giugno 2003, n. 196 ``Codice in materia di protezione dei dati personali''.}
-\end{center}
+\IfFileExists{FLAGEN}{\input{src/body_en.tex}}{\input{src/body_it.tex}}
 
 \end{document}
