modularizzato inclusione/esclusione data di nascita

--- a/src/title_it.tex
+++ b/src/title_it.tex
@@ -5,4 +5,4 @@
 \mobile{+39~349~3668324}
 \email{giampaolo.guiducci@gmail.com}
 \social[github]{https://github.com/gosub}
-\extrainfo{d.d.n.: 1981-08-14}
+\IfFileExists{FLAGDOB}{\extrainfo{d.d.n.: 1981-08-14}}{}
