added latest professional experience

--- a/src/body_en.tex
+++ b/src/body_en.tex
@@ -1,5 +1,17 @@
 \section{Professional Experience}
-\cventry{2021--\footnotesize{present}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Rome}{}
+\cventry{2024--\footnotesize{present}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Rome}{}
+        {Design, provisioning, and management of SAST/DAST/SCA platforms, integrated into DevSecOps development pipelines, for major banking sector operators at the national level. Activities include:
+          \begin{itemize}
+          \item Development and support of DevSecOps pipelines
+          \item Integration with GitLab, GitHub Enterprise, Jenkins
+          \item Development of customized integration tools
+          \item Collaboration and mediation with development teams
+          \item Optimization and evolution of platforms
+        \end{itemize}}
+%%%
+\vspace{3mm}
+%%%
+\cventry{2021--2024}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Rome}{}
         {Coordinator of an Application Management group for \emph{Telecom Italia} in the Security field.\\ Among the managed applications: \begin{itemize}
           \item AAA (Authentication, Authorization and Accounting)
           \item IDS/IPS probes
