--- a/src/body_it.tex
+++ b/src/body_it.tex
@@ -1,5 +1,16 @@
 \section{Esperienza professionale}
-\cventry{2021--\footnotesize{presente}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
+\cventry{2024--\footnotesize{presente}}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
+        {Progettazione, provisioning e gestione di piattaforme SAST/DAST/SCA, con integrazione in pipeline di sviluppo DevSecOps, per importanti operatori del settore bancario a livello nazionale. Tra le attività svolte: \begin{itemize}
+          \item Sviluppo e supporto pipeline DevSecOps
+          \item Integrazione in GitLab, Github Enterprise, Jenkins
+          \item Sviluppo di tool customizzati di integrazione
+          \item Collaborazione e intermediazione con i team di sviluppo
+          \item Efficientamento ed evoluzione delle piattaforme
+          \end{itemize}}
+%%%
+\vspace{3mm}
+%%%
+\cventry{2021--2024}{Lead Cybersecurity Architect}{NTT Data Italia S.p.a.}{Roma}{}
         {Coordinatore di un gruppo di Gestione Applicativa per \emph{Telecom Italia} in ambito Security.\\ Tra le applicazioni gestite: \begin{itemize}
           \item AAA (Authentication, Authorization and Accounting)
           \item sonde IDS/IPS
